Renders a rotating cube.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(MAKE_C_STANDARD 99)
 
 set(SOURCE_FILES src/main.c src/pk1000.h src/main.h src/sfml.h)
 add_executable(pku ${SOURCE_FILES})
-target_link_libraries(pku pthread csfml-graphics csfml-window csfml-system)
+target_link_libraries(pku pthread csfml-graphics csfml-window csfml-system m GL GLU)
